force-app/main/default/objects/Invoice_Comment__c/Invoice_Comment__c.object-meta.xml
<CustomObject>
    <label>Invoice Comment</label>
    <nameField>
        <displayFormat>IC-{000000000}</displayFormat>
        <label>Invoice Comment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>