force-app/main/default/objects/Invoice_Comment__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>Schindler_Invoice_History__c</referenceTo>
    <relationshipLabel>Invoice Comments</relationshipLabel>
    <relationshipName>Invoice_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>