force-app/main/default/objects/Invoice_Comment__c/fields/Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email__c</fullName>
    <label>Vendor Email</label>
    <type>Email</type>
</CustomField>